feat - added the rest of the entities